--- a/cn_structural_descriptors/lab1.ipynb
+++ b/cn_structural_descriptors/lab1.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Structural descriptors of complex networks\n",
+    "\n",
+    "Galata Aglaia-Elli & Kharitonova Ksenia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
