--- a/cn_models/lab2.ipynb
+++ b/cn_models/lab2.ipynb
@@ -11,6 +11,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import random\n",
+    "from random import choices\n",
+    "\n",
     "from itertools import combinations"
    ]
   },
@@ -70,7 +72,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def barabasi_albert(n, m):\n",
+    "    '''Creates Barabasi & alber graph from m average degree of the resulting network.\n",
+    "    '''\n",
+    "\n",
+    "    G = nx.Graph()\n",
+    "    # Create a complete graph with a small number of nodes\n",
+    "    if n < m:\n",
+    "        G = nx.complete_graph(n, create_using=G)\n",
+    "        return G\n",
+    "    else:\n",
+    "        G = nx.complete_graph(m, create_using=G)\n",
+    "\n",
+    "    for i in range(m, n):\n",
+    "        n_nodes = G.number_of_nodes()\n",
+    "        population = list(range(n_nodes))\n",
+    "        sum_degree = sum([G.degree[node] for node in G.nodes])\n",
+    "        weights = [G.degree[node]/sum_degree for node in G.nodes]\n",
+    "        edges = choices(population, weights, k=m)\n",
+    "        G.add_node(i)\n",
+    "        z = list(zip([i]*m, edges))\n",
+    "        G.add_edges_from(z)\n",
+    "\n",
+    "    # nx.draw_networkx(G, with_labels=False, node_size=12)\n",
+    "    # plt.show()\n",
+    "    return G\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -90,6 +119,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.8"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
