commit graphs, small fix on BA

--- a/cn_models/lab2_ksenia.ipynb
+++ b/cn_models/lab2_ksenia.ipynb
@@ -154,11 +154,16 @@
     "        n_nodes = G.number_of_nodes()\n",
     "        population = list(range(n_nodes))\n",
     "        sum_degree = sum([G.degree[node] for node in G.nodes])\n",
-    "        weights = [G.degree[node]/sum_degree for node in G.nodes]\n",
-    "        edges = choices(population, weights, k=m)\n",
-    "        G.add_node(i)\n",
-    "        z = list(zip([i]*m, edges))\n",
-    "        G.add_edges_from(z)\n",
+    "        if sum_degree != 0:\n",
+    "            weights = [G.degree[node]/sum_degree for node in G.nodes]\n",
+    "            edges = choices(population, weights, k=m)\n",
+    "            G.add_node(i)\n",
+    "            z = list(zip([i]*m, edges))\n",
+    "            G.add_edges_from(z)\n",
+    "        else:\n",
+    "            G.add_node(i)\n",
+    "            G.add_edges_from([(0, i)])\n",
+    "    #\n",
     "\n",
     "    # nx.draw_networkx(G, with_labels=False, node_size=12)\n",
     "    # plt.show()\n",
@@ -497,10 +502,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
