--- a/cn_community/lab3_airports.ipynb
+++ b/cn_community/lab3_airports.ipynb
@@ -1767,9 +1767,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:emma] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-emma-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1781,7 +1781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
